# bevy-jam3

./: Cargo.toml  LICENSE-MIT  README.md  credits.txt
assets/: ship.gltf
assets/shaders/: custom_prepass.wgsl  post_process_pass.wgsl  toon.wgsl
crates/utils/: cargo.toml
crates/utils/src/: game_time.rs  lib.rs  ship.rs
crates/utils/src/grid/render/: shadow.rs
crates/utils/src/vfx/: cubemap.rs  mod.rs  post.rs  toon.rs
src/: game.rs  main.rs  menu.rs  splash.rs
src/game/: camera.rs  mod.rs  player.rs
src/game/player/: crosshair.rs  mod.rs
